--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 .container {
   height: 500px;
   width: 1500px;
-  background: #318CFE;
+  background: #3d8ce6;
   position: relative;
 }
 
@@ -15,10 +15,10 @@
   transform: translate(-50%, -50%);
   height: 200px;
   width: 200px;
-  background: #54ABFB;
+  background: #318cfc;
   border-radius: 51% 49% 48% 52% / 62% 44% 56% 38%;
   opacity: 0.8;
-  border: 2px solid #3d93ff;
+  border: 2px solid #1e83ff;
 /*   transform: scale(1.5); */
 }
 
@@ -29,7 +29,7 @@
   width: 100%;
   background: #318CFE;
   border-radius: 51% 49% 48% 52% / 62% 44% 56% 38%;
-  box-shadow: -20px 30px 16px #1B6CFB, -40px 60px 32px #1b6cfb, inset -6px 6px 10px #1B6CFB, inset 2px 6px 10px #1a74e5, inset 20px -20px 22px white, inset 40px -40px 44px #a8ceff;
+  box-shadow: -20px 30px 16px #1B6CFB, -40px 60px 32px #1b6cfb, inset -6px 6px 10px #1b6cfb, inset 2px 6px 10px #1a74e5, inset 20px -20px 22px white, inset 40px -40px 44px #a8ceff;
 }
 
 .drop::after {
